--- a/src/styles.scss
+++ b/src/styles.scss
@@ -125,3 +125,13 @@ nb-route-tabset#patients .route-tabset {
 .mr-20 {
     margin-right: 20px;
 }
+.chat-window .header {
+    display: none !important;
+}
+.custom-chat-window {
+    box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%) !important;
+
+    nb-card nb-card-body {
+        padding: 0px;
+    }
+}
