New Chat module Integration

--- a/src/app/pages/chat/chat-list/chat-list.component.html
+++ b/src/app/pages/chat/chat-list/chat-list.component.html
@@ -4,7 +4,7 @@
             <div class="col-6">Chats</div>
             <div class="col-6 text-right">
                 <nb-actions size="small" class="justify-content-end">
-                    <nb-action nbTooltip="New Chat" nbTooltipPlacement="left" icon="plus-circle-outline"></nb-action>
+                    <nb-action nbTooltip="New Chat" nbTooltipPlacement="left" (click)="openChatBox()" icon="plus-circle-outline"></nb-action>
                 </nb-actions>
             </div>
 
