--- a/src/app/pages/chat/new-chat/new-chat.component.html
+++ b/src/app/pages/chat/new-chat/new-chat.component.html
@@ -1,5 +1,4 @@
-<nb-card class="mb-0 patient-list-width" size="medium" [nbSpinner]="isLoading"
-    nbSpinnerMessage="Please wait. We are fetching the patients list">
+<nb-card class="mb-0 patient-list-width" size="medium" [nbSpinner]="isLoading">
     <nb-card-header class="justify-content-center p-0">
         <nb-list-item>
             <div class="row col-12">
@@ -32,7 +31,7 @@
     </nb-card-header>
     <nb-list class="own-scroll">
         <nb-list-item class="cursor-pointer d-flex justify-content-between" *ngFor="let user of users">
-            <nb-user *ngIf="!isLoading" class="cursor-pointer warning" [name]="user.name" [title]="user.dob" [picture]="user.imageUrl">
+            <nb-user *ngIf="!isLoading" class="cursor-pointer warning" [name]="user.name" [title]="user.dob" [picture]="user.imageUrl" (click)="createChat(user)">
             </nb-user>
         </nb-list-item>
     </nb-list>
