--- a/src/app/pages/dashboard/measurements/measurements.component.html
+++ b/src/app/pages/dashboard/measurements/measurements.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="col-md-12">
         <!-- <ng2-smart-table [settings]="settings" [source]="data" ></ng2-smart-table> -->
-        <ngx-datatable class="bootstrap" [rows]="data" [columnMode]="ColumnMode.force" [scrollbarV]="true" [columns]="columns"
+        <ngx-datatable class="bootstrap" [rows]="data" [columnMode]="ColumnMode.force" [scrollbarV]="true"
         [headerHeight]="headerHeight" [rowHeight]="rowHeight" [loadingIndicator]="isLoading" [scrollbarV]="true"
         (scroll)="onScroll($event.offsetY)" style="height: 600px;">
         <ngx-datatable-column name="Name" headerClass="ps-4" prop="name" cellClass="ps-4">
