--- a/src/styles.scss
+++ b/src/styles.scss
@@ -135,3 +135,4 @@ nb-route-tabset#patients .route-tabset {
         padding: 0px;
     }
 }
+nb-chat-form{ .dropped-files{ div{ &:nth-child(2n){ display: none; } } } }
