Feat : Added Add Description to translate

--- a/src/app/pages/patients/history/history.component.html
+++ b/src/app/pages/patients/history/history.component.html
@@ -11,7 +11,7 @@
         <ng-template #historyDialog>
             <nb-card class="dialog-card card-width">
                 <nb-card-header>
-                    <h6>{{'KAddDescription' | translate}}</h6>
+                    <h6>{{'kAddDescription' | translate}}</h6>
                 </nb-card-header>
                 <nb-card-body>
                     <!-- <form [formGroup]="historyForm"> -->
