--- a/src/app/pages/todo/list/list.component.html
+++ b/src/app/pages/todo/list/list.component.html
@@ -9,22 +9,22 @@
                     <ngx-datatable class="bootstrap" [rows]="data" [columnMode]="ColumnMode.force" [scrollbarV]="true" [headerHeight]="50" [rowHeight]="50" [loadingIndicator]="isLoading" [scrollbarV]="true" style="height: 1000px;">
                         <ngx-datatable-column name="Patient User Name" prop="PatientID" [maxWidth]="250">
                             <ng-template let-value="value" ngx-datatable-cell-template>
-                                <span>{{value}}</span>
+                                <span>{{value || '-'}}</span>
                             </ng-template>
                         </ngx-datatable-column>
                         <ngx-datatable-column name="Type" prop="type" [maxWidth]="250" headerClass="text-center" cellClass="text-center">
                             <ng-template let-value="value" ngx-datatable-cell-template>
-                                <span>{{value}}</span>
+                                <span>{{value|| '-'}}</span>
                             </ng-template>
                         </ngx-datatable-column>
                         <ngx-datatable-column name="Start Time" prop="startDate" [maxWidth]="250" headerClass="text-center" cellClass="text-center">
                             <ng-template let-value="value" ngx-datatable-cell-template let-row="row">
-                                <span>{{value| date : 'dd/MM/yy, h:mm a'}}</span>
+                                <span>{{value| date : 'dd/MM/yy, h:mm a'|| '-'}}</span>
                             </ng-template>
                         </ngx-datatable-column>
                         <ngx-datatable-column name="Duration (mins)" prop="duration" headerClass="text-center" cellClass="text-center">
                             <ng-template let-value="value" ngx-datatable-cell-template>
-                                <span>{{value}}</span>
+                                <span>{{value|| '-'}}</span>
                             </ng-template>
                         </ngx-datatable-column>
                         <ngx-datatable-column name="Action" [maxWidth]="250" headerClass="text-center" cellClass="text-center ">
