fix: Search integration

--- a/src/app/pages/chat/new-chat/new-chat.component.html
+++ b/src/app/pages/chat/new-chat/new-chat.component.html
@@ -1,4 +1,4 @@
-<nb-card class="mb-0 patient-list-width" size="medium" [nbSpinner]="isLoading" nbSpinnerMessage="Please wait. We are fetching the list">
+<nb-card class="mb-0 patient-list-width" size="medium" [nbSpinner]="isLoading">
     <nb-card-header class="justify-content-center p-0">
         <nb-list-item>
             <div class="row container-fluid p-0">
@@ -25,6 +25,11 @@
             </div>
         </nb-list-item>
     </nb-card-header>
+    <nb-list *ngIf="usersProvider.length == 0 || users.length == 0">
+        <nb-list-item class="justify-content-center">
+            No Records found
+        </nb-list-item>
+    </nb-list> 
     <nb-list class="own-scroll" nbInfiniteList [threshold]="500" (bottomThreshold)="getPatientsList()" *ngIf="showList">
         <nb-list-item class="cursor-pointer d-flex justify-content-between" *ngFor="let user of users">
             <nb-user *ngIf="!isLoading" class="cursor-pointer warning" [name]="user.name" [title]="user.dob" [picture]="user.imageUrl" (click)="createChat(user)">
@@ -36,5 +41,5 @@
             <nb-user *ngIf="!isLoading" class="cursor-pointer warning" [name]="user.name" [title]="user.dob" [picture]="user.imageUrl" (click)="createChat(user)">
             </nb-user>
         </nb-list-item>
-    </nb-list>
+    </nb-list>  
 </nb-card>
