--- a/src/app/pages/patients/list/list.component.html
+++ b/src/app/pages/patients/list/list.component.html
@@ -22,7 +22,7 @@
         <nb-list-item>
             <nb-form-field class="w-100">
                 <nb-icon nbPrefix icon="search-outline" pack="eva"></nb-icon>
-                <input type="search" id='searchText' name="searchText" fullWidth status="success" nbInput [(ngModel)]="searchText" (search)="search()"
+                <input type="search" id='searchText' name="searchText" fullWidth status="success" nbInput [(ngModel)]="searchText"
                      #SearchInput>
             </nb-form-field>
         </nb-list-item>
