--- a/src/app/pages/chat/new-chat/new-chat.component.html
+++ b/src/app/pages/chat/new-chat/new-chat.component.html
@@ -25,12 +25,12 @@
             </div>
         </nb-list-item>
     </nb-card-header>
-    <nb-list *ngIf="usersProvider.length == 0 || users.length == 0">
+    <nb-list *ngIf="(!showList && usersProvider.length == 0 )|| (showList && users.length == 0)">
         <nb-list-item class="justify-content-center">
             No Records found
         </nb-list-item>
     </nb-list> 
-    <nb-list class="own-scroll" nbInfiniteList [threshold]="500" (bottomThreshold)="getPatientsList()" *ngIf="showList">
+    <nb-list class="own-scroll" nbInfiniteList *ngIf="showList">
         <nb-list-item class="cursor-pointer d-flex justify-content-between" *ngFor="let user of users">
             <nb-user *ngIf="!isLoading" class="cursor-pointer warning" [name]="user.name" [title]="user.dob" [picture]="user.imageUrl" (click)="createChat(user)">
             </nb-user>
